# kidproxy

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md  kidproxy.json  mise.toml  package.json
.github/: CONTRIBUTING.md
admin/: tailwind.css
src/: admin.rs  capture.rs  cli.rs  config.rs  entity.rs  error.rs  event.rs  lib.rs  main.rs  migration.rs  probe.rs  proxy.rs  runtime_manager.rs  schema.rs  tls.rs  transform.rs  writer.rs
static/: admin.css
tests/: admin_ui.rs  basic_proxy.rs  parquet_output.rs  sqlite_output.rs  streaming.rs  transforms.rs
tests/common/: mod.rs
