[package]
name = "kidproxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
arrow = "58"
base64 = "0.22.1"
bytes = "1"
clap = { version = "4.6", features = ["derive", "env"] }
futures = "0.3"
hex = "0.4"
parquet = { version = "58", features = ["arrow", "zstd"] }
rama = { version = "=0.3.0-alpha.4", features = ["http-full", "rustls"] }
rustls-native-certs = "0.8.3"
rustls-pemfile = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = [
    "formatting",
    "macros",
    "parsing",
    "serde",
] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
x509-parser = "0.18.1"

[dev-dependencies]
rcgen = "0.14.7"
reqwest = { version = "0.12.24", default-features = false, features = ["http2", "rustls-tls", "stream"] }
tempfile = "3.27.0"
