[package]
name = "kidproxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22.1"
bytes = "1"
clap = { version = "4.6", features = ["derive", "env"] }
futures = "0.3"
glob = "0.3.1"
hex = "0.4"
leptos = { version = "0.8", features = ["ssr"] }
leptos_axum = "0.8"
leptos_meta = { version = "0.8", features = ["ssr"] }
leptos_router = { version = "0.8", features = ["ssr"] }
rama = { version = "=0.3.0-alpha.4", features = ["http-full", "rustls"] }
rustls-native-certs = "0.8.4"
rustls-pemfile = "2.2.0"
sea-orm = { version = "1.1.20", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-time", "with-uuid"] }
sea-orm-migration = { version = "1.1.20", default-features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls", "with-time", "with-uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
time = { version = "0.3", features = [
    "formatting",
    "macros",
    "parsing",
    "serde",
] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.7", features = ["fs", "trace", "compression-br"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
x509-parser = "0.18.1"

[dev-dependencies]
rcgen = "0.14.8"
reqwest = { version = "0.12.24", default-features = false, features = ["http2", "rustls-tls", "stream"] }
tempfile = "3.27.0"
